--- a/Exercise1Solution/Resources/layout/Main.axml
+++ b/Exercise1Solution/Resources/layout/Main.axml
@@ -16,133 +16,131 @@
                 android:layout_height="wrap_content"
                 android:background="@null"
                 android:drawableLeft="@drawable/icon"
-                android:drawableTint="#FF4081"
-                android:text="Back"
-                android:textColor="#FF4081"
-                android:textSize="17sp" />
+                android:drawableTint="@color/pink"
+                android:text="@string/back"
+                android:textColor="@color/pink"
+                android:textSize="@dimen/toolbar_navigation_text_size" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="SIGN UP"
-                android:textSize="20sp"
+                android:text="@string/sign_up"
+                android:textSize="@dimen/title_size"
                 android:layout_centerHorizontal="true"
                 android:textStyle="bold" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="SIGN UP"
+                android:text="@string/sign_up"
                 android:layout_alignParentRight="true"
-                android:textColor="#FF4081"
+                android:textColor="@color/pink"
                 android:layout_marginRight="10dp"
-                android:textSize="17sp" />
+                android:textSize="@dimen/toolbar_navigation_text_size" />
         </RelativeLayout>
     </Toolbar>
     <Button
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="75dp"
         android:background="#e9e9e9"
-        android:gravity="center_vertical"
-        android:text="     CONNECT WITH FACEBOOK"
-        android:textSize="20sp"
-        android:drawableLeft="@drawable/logofb"
-        android:paddingLeft="20dp"
-        android:textColor="@android:color/holo_blue_dark" />
+        android:gravity="center"
+        android:text="@string/connect_with_facebook"
+        android:textColor="@android:color/holo_blue_dark"
+        android:textSize="@dimen/title_size" />
     <View
         android:layout_width="match_parent"
-        android:background="#aaa"
-        android:layout_height="1dp" />
+        android:layout_height="1dp"
+        android:background="#aaa" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:weightSum="2">
         <EditText
             android:layout_width="0dp"
-            android:layout_height="70dp"
-            android:layout_marginLeft="20dp"
+            android:layout_height="@dimen/edt_height"
+            android:layout_marginLeft="@dimen/margin_left"
             android:layout_weight="1"
             android:background="@null"
-            android:hint="First Name" />
+            android:hint="@string/first_name" />
         <View
             android:layout_width="1dp"
-            android:background="#aaa"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:background="#aaa" />
         <EditText
             android:layout_width="0dp"
-            android:layout_height="70dp"
-            android:layout_marginLeft="20dp"
+            android:layout_height="@dimen/edt_height"
+            android:layout_marginLeft="@dimen/margin_left"
             android:layout_weight="1"
             android:background="@null"
-            android:hint="Last Name" />
+            android:hint="@string/last_name" />
     </LinearLayout>
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#aaa"
-        android:layout_marginLeft="20dp" />
+        android:layout_marginLeft="@dimen/margin_left" />
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_marginLeft="20dp"
+        android:layout_height="@dimen/edt_height"
+        android:layout_marginLeft="@dimen/margin_left"
         android:background="@null"
-        android:hint="Email Address" />
+        android:hint="@string/email_address" />
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#aaa"
-        android:layout_marginLeft="20dp" />
+        android:layout_marginLeft="@dimen/margin_left" />
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="75dp"
-        android:layout_marginLeft="20dp"
+        android:layout_height="@dimen/edt_height"
+        android:layout_marginLeft="@dimen/margin_left"
         android:background="@null"
-        android:hint="Username" />
+        android:hint="@string/username" />
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#aaa"
-        android:layout_marginLeft="20dp" />
+        android:layout_marginLeft="@dimen/margin_left" />
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="75dp"
-        android:paddingLeft="20dp"
+        android:layout_height="@dimen/edt_height"
+        android:layout_marginLeft="@dimen/margin_left"
         android:background="@null"
-        android:hint="Password" />
+        android:hint="@string/password" />
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#aaa"
-        android:layout_marginLeft="20dp" />
+        android:layout_marginLeft="@dimen/margin_left" />
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="75dp"
-        android:layout_marginLeft="20dp"
+        android:layout_height="@dimen/edt_height"
+        android:layout_marginLeft="@dimen/margin_left"
         android:background="@null"
-        android:hint="Confirm Password" />
+        android:hint="@string/confirm_password" />
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#aaa"
-        android:layout_marginLeft="20dp" />
+        android:layout_marginLeft="@dimen/margin_left" />
     <RelativeLayout
-        android:background="#e9e9e9"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#e9e9e9">
         <TextView
             android:id="@+id/tv1"
-            android:textSize="18sp"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:gravity="center"
             android:layout_marginLeft="20dp"
-            android:text="I agree to the" />
+            android:gravity="center"
+            android:text="@string/i_agree_to_the"
+            android:textSize="@dimen/normal_size" />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text=" Terms of Service"
-            android:textSize="18sp"
-            android:layout_toRightOf="@id/tv1"
+            android:layout_toEndOf="@+id/tv1"
+            android:layout_toRightOf="@+id/tv1"
             android:gravity="center_vertical"
-            android:textColor="#FFFF4081" />
+            android:text="@string/terms_of_service"
+            android:textColor="@color/colorAccent"
+            android:textSize="@dimen/normal_size" />
         <Switch
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
